gccida/g1/mark_used_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4132:4: error: expected ';' after expression
rtx mem_set_list; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4132:5: error: use of undeclared identifier 'mem_set_list'; did you mean 'reg_set_last'?
rtx mem_set_list; // r14 
    ^~~~~~~~~~~~
    reg_set_last
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/rtl.h:1485:12: note: 'reg_set_last' declared here
extern rtx reg_set_last                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4148:6: error: use of undeclared identifier 'listp'
rtx *listp; // [rsp+10h] [rbp-48h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4156:1: error: use of undeclared identifier 'listp'
listp = &pbi->mem_set_list; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4165:30: error: use of undeclared identifier 'to'
fancy_abort( ( const char *)&to, 3893, "mark_used_regs"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4168:13: error: expected ';' after expression
rtx = ( rtx)rtx[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4178:22: error: use of undeclared identifier 'listp'
free_EXPR_LIST_list( listp); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4181:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( int *)rtx[2]; 
              ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4187:30: error: expected expression
mark_used_regs( pbi, *( rtx *)&v18[2 * v19++ + 2], cond, insn); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4188:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( int *)rtx[2]; 
              ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4195:22: error: use of undeclared identifier 'listp'
free_EXPR_LIST_list( listp); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4211:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4215:30: error: expected expression
mark_used_regs( pbi, *( rtx *)( v12.rtwint + 8), cond, insn); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4216:30: error: expected expression
mark_used_regs( pbi, *( rtx *)&rtx[1], cond, insn); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4220:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
|| ( v14.rtwint = ( __int64)rtx->fld[0], v15 = 0, ( unsigned __int16)( v13 - 132) <= 1u) ) 
                            ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4222:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4253:30: error: expected expression
mark_used_regs( pbi, *( rtx *)&rtx[1], cond, insn); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4274:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)rtx->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/flow.c:4276:30: error: expected expression
mark_used_regs( pbi, *( rtx *)( v8.rtwint + 8), cond, insn); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs/src/obj/flow.o] Error 1
